; ModuleID = '/home/carl/AnghaBench/xLua/build/luajit-2.1.0b3/src/extr_lj_cconv.c_lj_cconv_multi_init.c'
source_filename = "/home/carl/AnghaBench/xLua/build/luajit-2.1.0b3/src/extr_lj_cconv.c_lj_cconv_multi_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32 }
%struct.TYPE_6__ = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @lj_cconv_multi_init(i32* %0, %struct.TYPE_5__* %1, i32* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca %struct.TYPE_5__*, align 8
  %7 = alloca i32*, align 8
  store i32* %0, i32** %5, align 8
  store %struct.TYPE_5__* %1, %struct.TYPE_5__** %6, align 8
  store i32* %2, i32** %7, align 8
  %8 = load %struct.TYPE_5__*, %struct.TYPE_5__** %6, align 8
  %9 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = call i64 @ctype_isrefarray(i32 %10)
  %12 = icmp ne i64 %11, 0
  br i1 %12, label %20, label %13

13:                                               ; preds = %3
  %14 = load %struct.TYPE_5__*, %struct.TYPE_5__** %6, align 8
  %15 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 4
  %17 = call i64 @ctype_isstruct(i32 %16)
  %18 = icmp ne i64 %17, 0
  br i1 %18, label %20, label %19

19:                                               ; preds = %13
  store i32 0, i32* %4, align 4
  br label %50

20:                                               ; preds = %13, %3
  %21 = load i32*, i32** %7, align 8
  %22 = call i64 @tvistab(i32* %21)
  %23 = icmp ne i64 %22, 0
  br i1 %23, label %34, label %24

24:                                               ; preds = %20
  %25 = load i32*, i32** %7, align 8
  %26 = call i64 @tvisstr(i32* %25)
  %27 = icmp ne i64 %26, 0
  br i1 %27, label %28, label %35

28:                                               ; preds = %24
  %29 = load %struct.TYPE_5__*, %struct.TYPE_5__** %6, align 8
  %30 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %29, i32 0, i32 0
  %31 = load i32, i32* %30, align 4
  %32 = call i64 @ctype_isstruct(i32 %31)
  %33 = icmp ne i64 %32, 0
  br i1 %33, label %35, label %34

34:                                               ; preds = %28, %20
  store i32 0, i32* %4, align 4
  br label %50

35:                                               ; preds = %28, %24
  %36 = load i32*, i32** %7, align 8
  %37 = call i64 @tviscdata(i32* %36)
  %38 = icmp ne i64 %37, 0
  br i1 %38, label %39, label %49

39:                                               ; preds = %35
  %40 = load i32*, i32** %5, align 8
  %41 = load i32*, i32** %7, align 8
  %42 = call %struct.TYPE_6__* @cdataV(i32* %41)
  %43 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %42, i32 0, i32 0
  %44 = load i32, i32* %43, align 4
  %45 = call %struct.TYPE_5__* @lj_ctype_rawref(i32* %40, i32 %44)
  %46 = load %struct.TYPE_5__*, %struct.TYPE_5__** %6, align 8
  %47 = icmp eq %struct.TYPE_5__* %45, %46
  br i1 %47, label %48, label %49

48:                                               ; preds = %39
  store i32 0, i32* %4, align 4
  br label %50

49:                                               ; preds = %39, %35
  store i32 1, i32* %4, align 4
  br label %50

50:                                               ; preds = %49, %48, %34, %19
  %51 = load i32, i32* %4, align 4
  ret i32 %51
}

declare dso_local i64 @ctype_isrefarray(i32) #1

declare dso_local i64 @ctype_isstruct(i32) #1

declare dso_local i64 @tvistab(i32*) #1

declare dso_local i64 @tvisstr(i32*) #1

declare dso_local i64 @tviscdata(i32*) #1

declare dso_local %struct.TYPE_5__* @lj_ctype_rawref(i32*, i32) #1

declare dso_local %struct.TYPE_6__* @cdataV(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
